<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameResult">

    <TextView
        android:id="@+id/cpu_selection_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comp_selected"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/cpu_selection_string"
        android:textColor="#470f52"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/winnerName_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/winnerText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/winner_name"
        android:textColor="#470f52"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/comp_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/cpu_selected_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/playerSelectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cpu_selection_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/p1_selectionText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#A11344"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/winnerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerSelectTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/winner_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#F44336"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/player_selected_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerSelectTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/p1_select_text_ans"
        android:textColor="#470f52"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/record_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="40dp"
        android:onClick="nextActivity"
        android:text="@string/recordButton"
        android:textColor="#A11344"
        android:textStyle="bold|italic" />

</RelativeLayout>