<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorActivity"
    android:orientation="vertical">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/x_value"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="  |  "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/pitch"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/y_value"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:text="  |  "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/roll"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/z_value"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:text="  |  "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/azimuth"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <Button
        android:id="@+id/start_and_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"/>
        <Button
            android:id="@+id/start_and_stop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"/>
        <Button
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Find location"/>
        <Button
            android:id="@+id/compass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Compass"/>

    </TableLayout>


</LinearLayout>
